feat: add course popup

--- a/NUK Unofficial APP/Resources/Localizable.xcstrings
+++ b/NUK Unofficial APP/Resources/Localizable.xcstrings
@@ -670,6 +670,9 @@
     "五、與第三人共用個人資料之政策" : {
 
     },
+    "人" : {
+
+    },
     "以下是我們的隱私權保護政策，幫助您瞭解本App所蒐集的個人資料之運用及保護方式。" : {
 
     },
@@ -683,6 +686,12 @@
 
     },
     "劉顥權 Hao-Quan Liu" : {
+
+    },
+    "即時人數" : {
+
+    },
+    "呈現模式" : {
 
     },
     "問題回報" : {
