feat: add course category view

--- a/NUK Unofficial APP/Resources/Localizable.xcstrings
+++ b/NUK Unofficial APP/Resources/Localizable.xcstrings
@@ -703,7 +703,13 @@
     "國立高雄大學工藝與創意設計學系" : {
 
     },
+    "學分" : {
+
+    },
     "學分分析" : {
+
+    },
+    "實際數據以高大官網為主" : {
 
     },
     "您尚未獲取任何課程" : {
@@ -788,6 +794,9 @@
 
     },
     "隱私政策" : {
+
+    },
+    "需 %@ 學分" : {
 
     }
   },
