feat: add course category popup view

--- a/NUK Unofficial APP/Resources/Localizable.xcstrings
+++ b/NUK Unofficial APP/Resources/Localizable.xcstrings
@@ -149,6 +149,16 @@
         }
       }
     },
+    "%@學分/%@%@" : {
+      "localizations" : {
+        "zh-Hant" : {
+          "stringUnit" : {
+            "state" : "new",
+            "value" : "%1$@學分/%2$@%3$@"
+          }
+        }
+      }
+    },
     "%@年級" : {
 
     },
@@ -739,6 +749,9 @@
     "清除所選課程" : {
 
     },
+    "無規定" : {
+
+    },
     "版本資訊" : {
 
     },
@@ -794,6 +807,9 @@
 
     },
     "隱私政策" : {
+
+    },
+    "需 %@ 向度" : {
 
     },
     "需 %@ 學分" : {
