feat: add admin and academic department links on information screen

--- a/NUK Unofficial APP/Resources/Localizable.xcstrings
+++ b/NUK Unofficial APP/Resources/Localizable.xcstrings
@@ -223,9 +223,6 @@
     "Hello" : {
 
     },
-    "Hello, World!" : {
-
-    },
     "home.air.error" : {
       "extractionState" : "manual",
       "localizations" : {
@@ -611,6 +608,9 @@
     "推薦給他人" : {
 
     },
+    "教學單位" : {
+
+    },
     "更新時間" : {
 
     },
@@ -641,10 +641,10 @@
     "確認" : {
 
     },
-    "聯繫資訊" : {
+    "行事曆" : {
 
     },
-    "行事曆" : {
+    "行政單位" : {
 
     },
     "課程查詢" : {
