feat: add import timetable action extension

--- a/NUK Unofficial APP/Resources/Localizable.xcstrings
+++ b/NUK Unofficial APP/Resources/Localizable.xcstrings
@@ -620,6 +620,9 @@
     "查看即將迎來的課程" : {
 
     },
+    "清除匯入課程" : {
+
+    },
     "清除所選課程" : {
 
     },
@@ -660,9 +663,6 @@
 
     },
     "邵子恩 Zi-En Shao" : {
-
-    },
-    "重新取得課表" : {
 
     },
     "關於" : {
